--- a/content/posts/tutorial/2022-08-15-post-date.md
+++ b/content/posts/tutorial/2022-08-15-post-date.md
@@ -1,6 +1,6 @@
 ---
 title: How to set the date of a post
-last_modified_at: 2022-08-17
+modified: 2024-02-01
 ---
 
 When writing a new post, you can set the date of the post in a few different ways. The date of the post determines the order it appears in the post listings.
@@ -13,10 +13,10 @@ The date can be set in the post's filename. For example, `{{ page.inputPath }}` 
 
 The date can also be set in the page's frontmatter.
 
-```
+```markdown
 ---
 title: How to set the date of a post
-date: 2022-02-02
+date: 2024-02-02
 ---
 ```
 
@@ -26,21 +26,31 @@ If the date is set both in the file name as well as the frontmatter, the frontma
 
 ### Setting a last modified date for a post
 
-Setting the `last_modified_at` in the frontmatter modifies the display and metadata date, but without changing its order in the listing.
+Setting the `updated` in the frontmatter modifies the display and metadata date, but without changing its order in the listing.
 
-```
+```markdown
 ---
 title: How to set the date of a post
-last_modified_at: 2022-08-17
+updated: 2022-08-20
 ---
 ```
+
+This is **not** the standard for 11ty and created just for this template.
 
 ### Posts without a date
 
 If there's no date in the file name, or the frontmatter, then the date defaults to the time of build, so it gets updated each time the site is built.
+If you don't have a build process and serve it locally, it uses the filesystem to determine when the file was last updated/created.
+
+## Recommendations
+
+My recommendation is putting the date in the filename like `{{ page.inputPath }}`, or use a sub-folder, like `2022-08-15/post-date.md`.
+It will be easier for you to figure out, using any filesystem, to sort your posts, instead of having a "mess" (i.e unordered list) of articles.
 
 ---
 
-Anyway, the date appears at the bottom.
+Anyway, the date appears at the top of the post ☝️
 
-👇
+#### Links
+
+- [11ty Date Documentation](https://www.11ty.dev/docs/dates/)
