--- a/content/posts/tutorial/2022-08-15-post-date.md
+++ b/content/posts/tutorial/2022-08-15-post-date.md
@@ -1,6 +1,7 @@
 ---
 title: How to set the date of a post
 modified: 2024-02-01
+tags: ["eleventy"]
 ---
 
 When writing a new post, you can set the date of the post in a few different ways. The date of the post determines the order it appears in the post listings.
@@ -8,6 +9,10 @@ When writing a new post, you can set the date of the post in a few different way
 ### In the filename
 
 The date can be set in the post's filename. For example, `{{ page.inputPath }}` will be published to the URL `{{ page.url }}` and the date appears as `{{ page.date | readableDate }}`. This is the best way to write posts, since having the date at the beginning helps organize the posts in order.
+
+### In the enclosing folder
+
+The date can be set in the post enclosing folder. For example, `{{ page.inputPath }}` will be published to the URL `{{ page.url }}` and the date appears as `{{ page.date | readableDate }}`. This is the second best way to write posts.
 
 ### In the frontmatter
 
@@ -35,7 +40,7 @@ updated: 2022-08-20
 ---
 ```
 
-This is **not** the standard for 11ty and created just for this template.
+This is **not** the standard for Eleventy and created just for this template.
 
 ### Posts without a date
 
